[bug 822227] Increase search result title contrast

--- a/media/less/mobile/search.less
+++ b/media/less/mobile/search.less
@@ -22,6 +22,7 @@
         .title {
           display: block;
           font-size: 18px;
+          font-weight: bold;
         }
       }
     }
